[gd_scene load_steps=18 format=3 uid="uid://wotpla124xs"]

[ext_resource type="Script" path="res://scripts/boss.gd" id="1_30llo"]
[ext_resource type="Texture2D" uid="uid://ccira6frmsuuw" path="res://assets/sprites/boss_1.png" id="1_x6b64"]
[ext_resource type="PackedScene" uid="uid://cc1gsdab21e7a" path="res://scenes/enemies/boss_projectile.tscn" id="2_lllb3"]
[ext_resource type="Texture2D" uid="uid://d2qdqk3805ite" path="res://assets/sprites/boss.png" id="3_jqubn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kmcsc"]
size = Vector2(218, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek7cu"]
atlas = ExtResource("3_jqubn")
region = Rect2(0, 278, 125, 139)

[sub_resource type="AtlasTexture" id="AtlasTexture_muilk"]
atlas = ExtResource("3_jqubn")
region = Rect2(125, 278, 125, 139)

[sub_resource type="AtlasTexture" id="AtlasTexture_4f000"]
atlas = ExtResource("3_jqubn")
region = Rect2(250, 278, 125, 139)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2da3"]
atlas = ExtResource("3_jqubn")
region = Rect2(375, 278, 125, 139)

[sub_resource type="AtlasTexture" id="AtlasTexture_400tr"]
atlas = ExtResource("3_jqubn")
region = Rect2(0, 415, 125, 83)

[sub_resource type="AtlasTexture" id="AtlasTexture_o427l"]
atlas = ExtResource("1_x6b64")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q51xu"]
atlas = ExtResource("1_x6b64")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi2w6"]
atlas = ExtResource("1_x6b64")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb25f"]
atlas = ExtResource("1_x6b64")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mqif"]
atlas = ExtResource("1_x6b64")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_syonv"]
atlas = ExtResource("1_x6b64")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_bjsfl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek7cu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muilk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f000")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2da3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_400tr")
}],
"loop": false,
"name": &"boss_death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o427l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q51xu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi2w6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pb25f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mqif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syonv")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="Boss" type="Area2D"]
z_index = 4
collision_layer = 4
collision_mask = 2
script = ExtResource("1_30llo")
projectile_scene = ExtResource("2_lllb3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(23, -79.5)
shape = SubResource("RectangleShape2D_kmcsc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-18, -60)
scale = Vector2(7.05859, 5.25781)
sprite_frames = SubResource("SpriteFrames_bjsfl")
animation = &"boss_death"
autoplay = "idle"

[node name="ProjectileTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ProjectileMarker" type="Marker2D" parent="."]
position = Vector2(-31, 22)

[node name="KillTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="ProjectileTimer" to="." method="_on_projectile_timer_timeout"]
[connection signal="timeout" from="KillTimer" to="." method="_on_kill_timer_timeout"]
